feat: scrollbar is hidden now using webkit-scrollbar in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scrollbar::-webkit-scrollbar:hover {
+    display: block;
+    width: 18px;
+  }
+ 
+}
